--- a/ECommerce/ECommerce.Presentation/appsettings.json
+++ b/ECommerce/ECommerce.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EcommerceConnectionStr": "Server=DESKTOP-K1G3SS3\\SQLEXPRESS;Database=Ecommerce;Trusted_Connection=True;TrustServerCertificate=Yes"
+  }
 }
